# ren

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: ci.yml  release.yml
docs/: README.zh-CN.md
docs/superpowers/plans/: 2026-03-31-ui-redesign.md
docs/superpowers/specs/: 2026-03-31-ui-redesign-design.md
src/: App.css  App.jsx  index.html  main.js  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  main.rs  proxy.rs
